# easyvec

./: .bumpversion.cfg  .gitignore  Makefile  README.md  Untitled.ipynb  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
src/: 4tst.ipynb
src/easyvec/: __init__.py  geometry.cpp  geometry.html  geometry.pxd  geometry.pyx  matrixes.cpp  matrixes.html  matrixes.pxd  matrixes.pyx  vectors.cpp  vectors.html  vectors.pxd  vectors.pyx
tests/: test_geometry.py  test_intersect.py  test_lines_etc.py  test_mat2.py  test_mat3.py  test_vec2.py
