[metadata]
name = easyvec
version = 0.0.5
description = Vector library
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Mikhail Tovarnov
author_email = mtovarnov@mail.com
url = https://github.com/TovarnovM/easyvec
download_urls = https://pypi.org/project/easyvec
project_urls =
	Documentation = https://github.com/TovarnovM/easyvec
	Code = https://github.com/TovarnovM/easyvec
	Issue tracker = https://github.com/TovarnovM/easyvec/issues
classifiers =
	Development Status :: 1 - Planning
	License :: OSI Approved :: MIT License
	Intended Audience :: Education
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Mathematics
	Natural Language :: Russian
	Operating System :: OS Independent
	Programming Language :: C
	Programming Language :: Cython
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: Implementation :: CPython

[options]
zip_safe = False
python_requires = >=3.4
package_dir = =src
packages = find:

[options.packages.find]
where = src
